# python-vezbe

./: README.md  pyproject.toml
src/: bulletPointAdder.py  collatz.py  comaCode.py  conway.py  fantasyGameInventory.py  guessTheNumber.py  hello.py  isPhoneNumber.py  isPhoneNumber2.py  list.py  multi-clipboard.py  multiplicationQuiz.py  phoneAndEmail.py  prettyCharacterCount.py  rpsGame.py  ticTacToe.py  zigzag.py
src/kviz/: capitalsquiz1.txt  capitalsquiz10.txt  capitalsquiz11.txt  capitalsquiz12.txt  capitalsquiz13.txt  capitalsquiz14.txt  capitalsquiz15.txt  capitalsquiz16.txt  capitalsquiz17.txt  capitalsquiz18.txt  capitalsquiz19.txt  capitalsquiz2.txt  capitalsquiz20.txt  capitalsquiz21.txt  capitalsquiz22.txt  capitalsquiz23.txt  capitalsquiz24.txt  capitalsquiz25.txt  capitalsquiz26.txt  capitalsquiz27.txt  capitalsquiz28.txt  capitalsquiz29.txt  capitalsquiz3.txt  capitalsquiz30.txt  capitalsquiz31.txt  capitalsquiz32.txt  capitalsquiz33.txt  capitalsquiz34.txt  capitalsquiz35.txt  capitalsquiz4.txt  capitalsquiz5.txt  capitalsquiz6.txt  capitalsquiz7.txt  capitalsquiz8.txt  capitalsquiz9.txt  capitalsquiz_answers1.txt  capitalsquiz_answers10.txt  capitalsquiz_answers11.txt  capitalsquiz_answers12.txt  capitalsquiz_answers13.txt  (+31 more)
